--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,11 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
     implementation("com.squareup.okhttp3:okhttp:4.9.3")
-    implementation 'com.google.code.gson:gson:2.9.0'
+    //implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.0'
+    implementation 'com.googlecode.json-simple:json-simple:1.1.1'
+    //implementation 'com.google.code.gson:gson:2.9.0'
+    //implementation "com.squareup.retrofit2:retrofit:2.9.0"
+    //implementation "com.squareup.retrofit2:converter-gson:2.9.0"
 }
 // For emojis
 compileJava.options.encoding = 'UTF-8'
