--- a/build.gradle
+++ b/build.gradle
@@ -16,8 +16,10 @@ repositories {
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
-    implementation("com.squareup.okhttp3:okhttp:4.9.3")
+
+    implementation 'com.squareup.okhttp3:okhttp:5.0.0-alpha.6'
     implementation 'com.google.code.gson:gson:2.9.0'
 }
+
 // For emojis
 compileJava.options.encoding = 'UTF-8'
