--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,10 @@ repositories {
     mavenCentral()
 }
 
+javadoc {
+
+}
+
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
@@ -20,7 +24,7 @@ dependencies {
     implementation 'com.github.corese4rch:cvurl-io:1.5.1'
     implementation 'org.slf4j:slf4j-log4j12:1.7.36'
     implementation 'org.slf4j:slf4j-api:1.7.36'
-    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.2.1'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.3'
 }
 
 // For emojis
